// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders correctly and match the snapshot with custom back icon 1`] = `
<div>
  <div>
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row-reverse; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders correctly and match the snapshot with custom next icon 1`] = `
<div>
  <div>
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row-reverse; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders correctly and match the snapshot with default variant 1`] = `
<div>
  <div>
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row-reverse; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <div
        class="MuiMobileStepper-dots css-1384nzf-MuiMobileStepper-dots"
      >
        <div
          class="MuiMobileStepper-dot MuiMobileStepper-dotActive css-26w9jf-MuiMobileStepper-dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders correctly and match the snapshot with progress variant 1`] = `
<div>
  <div>
    <div
      style="overflow-x: hidden; flex: 1; flex-direction: flex; height: 100%;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row-reverse; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div>
            <img
              alt="San Francisco – Oakland Bay Bridge, United States"
              class="MuiBox-root css-ijk13v"
              src="https://images.unsplash.com/photo-1537944434965-cf4679d1a598?auto=format&fit=crop&w=400&h=250&q=60"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic css-rh92k-MuiPaper-root-MuiMobileStepper-root"
    >
      <span
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="NaN"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate MuiMobileStepper-progress css-1be5mm1-MuiLinearProgress-root-MuiMobileStepper-progress"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
          style="transform: translateX(NaN%);"
        />
      </span>
    </div>
  </div>
</div>
`;
